--- a/src/assets/styles/SearchResults.css
+++ b/src/assets/styles/SearchResults.css
@@ -5,13 +5,14 @@
     background-repeat: no-repeat;
     background-origin: border-box;
     background-clip: border-box;
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-color: transparent;
     padding: 20px 25px;
-    min-height: 85vh;
+    min-height: 100vh;
     display: grid;
     grid-template-rows: 2fr 1fr;
     align-items: flex-start;
+    justify-items: center;
 }
 
 .error-message-text {
@@ -34,6 +35,7 @@
     cursor: pointer;
     font-size: 1.2rem;
     font-weight: 600;
+    color: white;
 }
 
 .back-button-image {
@@ -51,7 +53,7 @@
     background-repeat: no-repeat;
     background-origin: border-box;
     background-clip: border-box;
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-color: transparent;
 }
 
@@ -65,4 +67,12 @@
     color: white;
     border: none;
     border: 2px solid white;
+}
+
+/*---------------------------------------------- MEDIA QUERIES -------------------------------------*/
+@media (min-width: 320px) and (max-width: 480px) {
+    .search-page-container.dark-mode {
+        background-image: none;
+        background-color: black;
+    }
 }
